<resources>
    <string name="app_name">MyBank</string>
    <string name="login">Login</string>
    <string name="registro">Registrarse</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="olvido">Has olvidado la contraseña?</string>
    <string name="loginIncorrecto">Usuario o contraseña incorrectos</string>
    <string name="listMovements">Listado de Movimientos</string>
    <string name="exit">Salir</string>
</resources>